--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://180.71.56.236:3306/tjckorea?serverTimezone=UTC&useSSL=false
 spring.datasource.username=tjckorea
 spring.datasource.password=TJCkorea12#$
