--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://180.71.56.236:3306/tjckorea?serverTimezone=UTC&useSSL=false
 spring.datasource.username=tjckorea
 spring.datasource.password=TJCkorea12#$
+driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
+log4jdbc.dump.sql.maxlinelength=0
+logging.level.org.springframework.jdbc.core = TRACE
